fortran/src/randompack.f90


  logical(c_bool) function crp_t(x, n, nu, rngp) bind(C, name="randompack_t")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: nu
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_tf(x, n, nu, rngp) bind(C, name="randompack_tf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: nu
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_f(x, n, nu1, nu2, rngp) bind(C, name="randompack_f")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: nu1
    real(c_double), value :: nu2
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_ff(x, n, nu1, nu2, rngp) bind(C, name="randompack_ff")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: nu1
    real(c_float), value :: nu2
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_gumbel(x, n, mu, beta, rngp) &
    bind(C, name="randompack_gumbel")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: mu
    real(c_double), value :: beta
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_gumbelf(x, n, mu, beta, rngp) &
    bind(C, name="randompack_gumbelf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: mu
    real(c_float), value :: beta
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_pareto(x, n, xm, alpha, rngp) &
    bind(C, name="randompack_pareto")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: xm
    real(c_double), value :: alpha
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_paretof(x, n, xm, alpha, rngp) &
    bind(C, name="randompack_paretof")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: xm
    real(c_float), value :: alpha
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_weibull(x, n, shape, scale, rngp) &
    bind(C, name="randompack_weibull")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: shape
    real(c_double), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_weibullf(x, n, shape, scale, rngp) &
    bind(C, name="randompack_weibullf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: shape
    real(c_float), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_skew_normal(x, n, mu, sigma, alpha, rngp) &
    bind(C, name="randompack_skew_normal")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: mu
    real(c_double), value :: sigma
    real(c_double), value :: alpha
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_skew_normalf(x, n, mu, sigma, alpha, rngp) &
    bind(C, name="randompack_skew_normalf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: mu
    real(c_float), value :: sigma
    real(c_float), value :: alpha
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_mvn(transp, mu, Sig, d, n, X, ldx, L, rngp) &
    bind(C, name="randompack_mvn")
    import :: c_ptr, c_bool, c_int, c_size_t
    type(c_ptr), value :: transp
    type(c_ptr), value :: mu
    type(c_ptr), value :: Sig
    integer(c_int), value :: d
    integer(c_size_t), value :: n
    type(c_ptr), value :: X
    integer(c_int), value :: ldx
    type(c_ptr), value :: L
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_int(x, len, m, n, rngp) bind(C, name="randompack_int")
    import :: c_int, c_int32_t, c_size_t, c_ptr, c_bool
    integer(c_int32_t) :: x(*)
    integer(c_size_t), value :: len
    integer(c_int32_t), value :: m
    integer(c_int32_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_long_long(x, len, m, n, rngp) &
    bind(C, name="randompack_long_long")
    import :: c_int64_t, c_size_t, c_ptr, c_bool
    integer(c_int64_t) :: x(*)
    integer(c_size_t), value :: len
    integer(c_int64_t), value :: m
    integer(c_int64_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_perm(x, len, rngp) bind(C, name="randompack_perm")
    import :: c_int, c_int32_t, c_ptr, c_bool
    integer(c_int32_t) :: x(*)
    integer(c_int), value :: len
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_sample(x, len, k, rngp) bind(C, name="randompack_sample")
    import :: c_int, c_int32_t, c_ptr, c_bool
    integer(c_int32_t) :: x(*)
    integer(c_int), value :: len
    integer(c_int), value :: k
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_uint32(x, len, bound, rngp) &
    bind(C, name="randompack_uint32")
    import :: c_int32_t, c_size_t, c_ptr, c_bool
    integer(c_int32_t) :: x(*)
    integer(c_size_t), value :: len
    integer(c_int32_t), value :: bound
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_uint64(x, len, bound, rngp) &
    bind(C, name="randompack_uint64")
    import :: c_int64_t, c_size_t, c_ptr, c_bool
    integer(c_int64_t) :: x(*)
    integer(c_size_t), value :: len
    integer(c_int64_t), value :: bound
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_engines(eng, desc, neng, eng_maxlen, desc_maxlen) &
    bind(C, name="randompack_engines")
    import :: c_ptr, c_int, c_bool
    type(c_ptr), value :: eng
    type(c_ptr), value :: desc
    integer(c_int) :: neng
    integer(c_int) :: eng_maxlen
    integer(c_int) :: desc_maxlen
  end function

  logical(c_bool) function crp_serialize(buf, len, rngp) &
    bind(C, name="randompack_serialize")
    import :: c_ptr, c_int, c_bool
    type(c_ptr), value :: buf
    integer(c_int) :: len
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_deserialize(buf, len, rngp) &
    bind(C, name="randompack_deserialize")
    import :: c_ptr, c_int, c_bool
    type(c_ptr), value :: buf
    integer(c_int), value :: len
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_philox_set_key(key, rngp) &
    bind(C, name="randompack_philox_set_key")
    import :: c_ptr, c_bool, c_int64_t
    integer(c_int64_t), intent(in) :: key(2)
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_advance(delta, rngp) bind(C, name="randompack_advance")
    import :: c_ptr, c_bool, c_int64_t
    integer(c_int64_t), intent(in) :: delta(2)
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_squares_set_key(key, rngp) &
    bind(C, name="randompack_squares_set_key")
    import :: c_ptr, c_bool, c_int64_t
    integer(c_int64_t), value :: key
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_pcg64_set_inc(inc, rngp) &
    bind(C, name="randompack_pcg64_set_inc")
    import :: c_ptr, c_bool, c_int64_t
    integer(c_int64_t), intent(in) :: inc(2)
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_sfc64_set_abc(abc, rngp) &
    bind(C, name="randompack_sfc64_set_abc")
    import :: c_ptr, c_bool, c_int64_t
    integer(c_int64_t), intent(in) :: abc(3)
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_chacha_set_nonce(nonce, rngp) &
    bind(C, name="randompack_chacha_set_nonce")
    import :: c_ptr, c_bool, c_int32_t
    integer(c_int32_t), intent(in) :: nonce(3)
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_set_state(state, nstate, rngp) &
    bind(C, name="randompack_set_state")
    import :: c_ptr, c_bool, c_int64_t, c_int
    integer(c_int64_t) :: state(*)
    integer(c_int), value :: nstate
    type(c_ptr), value :: rngp
  end function

  function crp_last_error(rngp) bind(C, name="randompack_last_error") result(p)
    import :: c_ptr
    type(c_ptr), value :: rngp
    type(c_ptr) :: p
  end function

end interface

! Helper routines and free procedures implemented in the submodule.
interface
  pure module function to_c_string(s) result(cs)
  character(len=*), intent(in) :: s
  character(kind=c_char), allocatable :: cs(:)
  end function

  module function cstr_to_fstring(p) result(msg)
  type(c_ptr), intent(in) :: p
  character(len=:), allocatable :: msg
  end function

  module subroutine check_kinds()
  end subroutine

  module function rp_error_message(self, where) result(msg)
  class(randompack_rng), intent(in) :: self
  character(len=*), intent(in) :: where
  character(len=:), allocatable :: msg
  end function

  module subroutine engines(names, descriptions)
  character(len=:), allocatable, intent(out) :: names(:)
  character(len=:), allocatable, intent(out) :: descriptions(:)
  end subroutine
end interface

! Type-bound procedure implementations provided by the submodule.
interface
  module subroutine rp_finalize(self)
  type(randompack_rng), intent(inout) :: self
  end subroutine

  module subroutine rp_free(self)
  class(randompack_rng), intent(inout) :: self
  end subroutine

  module subroutine rp_create(self, engine, bitexact, full_mantissa)
  class(randompack_rng), intent(inout) :: self
  character(len=*), intent(in), optional :: engine
  logical, intent(in), optional :: bitexact
  logical, intent(in), optional :: full_mantissa
  end subroutine

  module subroutine rp_duplicate(self, out)
  class(randompack_rng), intent(in) :: self
  type(randompack_rng), intent(out) :: out
  end subroutine

  module subroutine rp_randomize(self)
  class(randompack_rng), intent(inout) :: self
  end subroutine

  module subroutine rp_jump(self, p)
  class(randompack_rng), intent(inout) :: self
  integer(c_int), intent(in) :: p
  end subroutine

  module subroutine rp_seed32(self, seed, spawn_key)
  class(randompack_rng), intent(inout) :: self
  integer(c_int32_t), intent(in) :: seed
  integer(c_int32_t), intent(in), optional, target :: spawn_key(:)
  end subroutine

  module subroutine rp_seed64(self, seed, spawn_key)
  class(randompack_rng), intent(inout) :: self
  integer(c_int64_t), intent(in) :: seed
  integer(c_int64_t), intent(in), optional, target :: spawn_key(:)
  end subroutine

  module subroutine unif_vec(self, x, a, b)
  class(randompack_rng), intent(inout) :: self
  double precision, intent(out) :: x(:)
  double precision, intent(in), optional :: a
  double precision, intent(in), optional :: b
  end subroutine

  module subroutine unif_mat(self, x, a, b)
  class(randompack_rng), intent(inout) :: self
  double precision, intent(out) :: x(:,:)
  double precision, intent(in), optional :: a
  double precision, intent(in), optional :: b
  end subroutine

  module subroutine uniff_vec(self, x, a, b)
  class(randompack_rng), intent(inout) :: self
  real, intent(out) :: x(:)
  real, intent(in), optional :: a
  real, intent(in), optional :: b
  end subroutine

  module subroutine uniff_mat(self, x, a, b)
  class(randompack_rng), intent(inout) :: self
  real, intent(out) :: x(:,:)
  real, intent(in), optional :: a
  real, intent(in), optional :: b
  end subroutine
